--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="start.js"></script>
+<script type="text/javascript" src="present.js"></script>
 
 <h1>Felicitari!!!</h1>
 <p>Esti pe drumul cel bun pentru descoperirea cadoului de anul acesta!</p>
