--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script type="text/javascript" src="present.js"></script>
 
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <h1>Cadoul de anul acesta trebuie cautat! Daca citesti asta inseamna ca deja ai facut primul pas si esti pe drumul cel bun :)</h1>
 <form action="https://sentibot.github.io/MCGC/I1">
     <input type="submit" value="Spre cadou >!!!" />
