--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <h1>Cadoul de anul acesta trebuie cautat! Daca citesti asta inseamna ca deja ai facut primul pas si esti pe drumul cel bun :)</h1>
-<form action="https://sentibot.github.io/MCGC/I1">
-    <input type="submit" value="Spre cadou >!!!" />
-</form>
+
+<a href="https://sentibot.github.io/MCGC/I1" class="myButton">light red</a>
 
