--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 
 <h1>Cadoul de anul acesta trebuie cautat! Daca citesti asta inseamna ca deja ai facut primul pas si esti pe drumul cel bun :)</h1>
 
-<div><a href="https://sentibot.github.io/MCGC/I1" class="myButton">light red</a></div>
+<div class="center"><a href="https://sentibot.github.io/MCGC/I1" class="myButton">light red</a></div>
 
