--- a/I1.html
+++ b/I1.html
@@ -1,2 +1,8 @@
-<h1>Sfat de la Mos Craciun:</h1>
-<p>Pentru a prinde forta </p>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
+<h1>Pentru a putea incepe cautarea cadoului, va trebui sa prinzi puteri :)</h1>
+
+<h3>Vrei un <span onclick="show" class="hint">indiciu</span> mai exact? (cost: un pupic)</h3>
+<div class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div>
