--- a/I1.html
+++ b/I1.html
@@ -4,5 +4,5 @@
 
 <h1>Pentru a putea incepe cautarea cadoului, va trebui sa prinzi puteri :)</h1>
 
-<h3>Vrei un <span onclick="show" class="hint">indiciu</span> mai exact? (cost: un pupic)</h3>
-<div class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div>
+<h3>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un pupic)</h3>
+<div id="hint1" class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div>
