--- a/I1.html
+++ b/I1.html
@@ -6,6 +6,6 @@
 <h1>Pentru a putea incepe cautarea cadoului, va trebui sa prinzi puteri :)</h1>
 
 <div class="center">
-    <h3>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un pupic)</h3>
-    <div id="hint1" class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div>
+    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un pupic)</h2>
+    <h3><div id="hint1" class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div></h3>
 </div>
