--- a/I1.html
+++ b/I1.html
@@ -7,5 +7,7 @@
 
 <div class="center">
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un pupic)</h2>
-    <h3><div id="hint1" class="hidden">Gasesti urmatorul indiciu la micul dejun :)</div></h3>
+    <h3><div id="hint1" class="hidden">Cauta urmatorul indiciu la micul dejun :)</div></h3>
 </div>
+
+<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Vreau Cadou!!!</a></div>
