--- a/I1.html
+++ b/I1.html
@@ -10,4 +10,4 @@
     <h3><div id="hint1" class="hidden">Cauta urmatorul indiciu la micul dejun :)</div></h3>
 </div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Vreau Cadou!!!</a></div>
+<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu</a></div>
