--- a/I2.html
+++ b/I2.html
@@ -10,6 +10,6 @@
     <h3><div id="hint1" class="hidden">Pregateste-ti bagajul pentru o mica plimbare, dar include si haine mai groase 
                                         ca sa poti sta afara pe timpul noptii</div></h3>
 </div>
-<img src="https://goo.gl/images/yrPWnQ" alt="">
+<img src="http://www.vacanzattivajournal.com/en/immagini/784520008/one-rule-always-customize-the-itinerary.jpg?MTkwMHgwOjphdXRvOjhiNmM4NTA0YTY1YjIyNDQxMzMwMjc2Mzk1N2Q1MTI3" alt="">
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Vreau Cadou!!!</a></div>
