--- a/I2.html
+++ b/I2.html
@@ -2,14 +2,17 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-
-<h1>Mos Craciun iti spune ca anul acesta pentru a te bucura de cadou, va trebui sa poti sa stai afara pe timpul serii...</h1>
+<h2 id="msg2">si</h2> <!--Fericita-->
+<h1>Prima parte a cadoului incepe cu o mica drumetie. Primul pas pentru a face o plimbare este intotdeauna...</h1>
 
 <div class="center">
-    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un sarut!)</h2>
-    <h3><div id="hint1" class="hidden">Pregateste-ti bagajul pentru o mica plimbare, dar include si haine mai groase 
+    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> ca sa stii exact ce sa pregatesti? (<u><b>cost</b></u>: doi pupici!)</h2>
+    <h3><div id="hint1" class="hidden">pregatirea bagajului... include si haine mai groase 
                                         ca sa poti sta afara pe timpul noptii</div></h3>
 </div>
-<img src="http://www.vacanzattivajournal.com/en/immagini/784520008/one-rule-always-customize-the-itinerary.jpg?MTkwMHgwOjphdXRvOjhiNmM4NTA0YTY1YjIyNDQxMzMwMjc2Mzk1N2Q1MTI3" alt="">
+<div class="center">    
+    <img src="/img/car_trip.jpg" alt="" width="500px;" height="500px;">
+</div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Vreau Cadou!!!</a></div>
+<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu!!!</a></div>
+<!--trebuie inlocuit cu QR_FERICITA -->
