--- a/I1.html
+++ b/I1.html
@@ -2,12 +2,13 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-
-<h1>Pentru a putea incepe cautarea cadoului, va trebui sa prinzi puteri :)</h1>
+<h2 id="msg1">Iti doresc sa fii...</h2> <!--sanatoasa-->
+<h1>Pentru a incepe cautarea cadoului, va trebui prima data sa prinzi puteri :)</h1>
 
 <div class="center">
-    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (cost: un pupic)</h2>
-    <h3><div id="hint1" class="hidden">Cauta urmatorul indiciu la micul dejun :)</div></h3>
+    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (<u><b>cost</b></u>: un pupic)</h2>
+    <h3><div id="hint1" class="hidden">Fiecare Craciun incepe cu un mic dejun delicios; poate vei gasi un alt indiciu acolo :)</div></h3>
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu</a></div>
+<!--trebuie inlocuit cu QR_SANATOASA -->
