--- a/I2.html
+++ b/I2.html
@@ -11,7 +11,7 @@
                                         ca sa poti sta afara pe timpul noptii</div></h3>
 </div>
 <div class="center">    
-    <img src="/img/car_trip.jpg" alt="" width="500px;" height="500px;">
+    <img src="mcgc/img/car_trip.jpg" alt="" width="500px;" height="500px;">
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu!!!</a></div>
