--- a/I3.html
+++ b/I3.html
@@ -6,8 +6,8 @@
 <h1>Recunoaste orasul...</h1>
 
 <div class="center">    
-    <img src="/img/cluj1.jpg" alt="" width="500px;" height="500px;">
-    <img src="/img/cluj2.jpg" alt="" width="500px;" height="500px;">
+    <img src="mcgc/img/cluj1.jpg" alt="" width="500px;" height="500px;">
+    <img src="mcgc/img/cluj2.jpg" alt="" width="500px;" height="500px;">
 </div>
 
 <div class="center">
