--- a/I3.html
+++ b/I3.html
@@ -2,12 +2,12 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h2 id="msg3">, sa ai parte de </h2> <!--Iubire-->
+<h4 id="msg3">, sa ai parte de </h4> <!--Iubire-->
 <h1>Recunoaste orasul...</h1>
 
 <div class="center">    
-    <img src="mcgc/img/cluj1.jpg" alt="" width="500px;" height="500px;">
-    <img src="mcgc/img/cluj2.jpg" alt="" width="500px;" height="500px;">
+    <img src="img/cluj1.jpg" alt="" width="500px;" height="500px;">
+    <img src="img/cluj2.jpg" alt="" width="500px;" height="500px;">
 </div>
 
 <div class="center">
