--- a/I2.html
+++ b/I2.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h2 id="msg2">si</h2> <!--Fericita-->
+<h4 id="msg2">si</h4> <!--Fericita-->
 <h1>Prima parte a cadoului incepe cu o mica drumetie. Primul pas pentru a face o plimbare este intotdeauna...</h1>
 
 <div class="center">
@@ -11,7 +11,7 @@
                                         ca sa poti sta afara pe timpul noptii</div></h3>
 </div>
 <div class="center">    
-    <img src="mcgc/img/car_trip.jpg" alt="" width="500px;" height="500px;">
+    <img src="img/car_trip.jpg" alt="" width="500px;" height="500px;">
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu!!!</a></div>
