--- a/I3.html
+++ b/I3.html
@@ -16,4 +16,4 @@
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I4" class="myButton">Urmatorul indiciu!!!</a></div>
-<!--trebuie inlocuit cu QR_FERICITA -->
+<!--trebuie inlocuit cu QR_IUBIRE_3 -->
