--- a/I1.html
+++ b/I1.html
@@ -11,4 +11,4 @@
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu</a></div>
-<!--trebuie inlocuit cu QR_SANATOASA -->
+<!--trebuie inlocuit cu QR_SANATOASA_1 -->
