--- a/I2.html
+++ b/I2.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg2">si</h4> <!--Fericita-->
-<h1>Prima parte a cadoului incepe cu o mica drumetie. Primul pas pentru a face o plimbare este intotdeauna...</h1>
+<h1>Prima parte a cadoului incepe cu o mica drumetie. Primul pas pentru a face o mica excursie este intotdeauna...</h1>
 
 <div class="center">
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> ca sa stii exact ce sa pregatesti? (<u><b>cost</b></u>: doi pupici!)</h2>
@@ -15,4 +15,4 @@
 </div>
 
 <div class="center"><a href="https://sentibot.github.io/MCGC/I3" class="myButton">Urmatorul indiciu!!!</a></div>
-<!--trebuie inlocuit cu QR_FERICITA -->
+<!--trebuie inlocuit cu QR_FERICITA_2 -->
