--- a/I5.html
+++ b/I5.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h4 id="msg3">si...placute</h4> <!--Surprize-->
+<h4 id="msg5">si...placute!</h4> <!--Surprize-->
 <h1>Craciun Fericit!</h1>
 
 <div class="center">    
@@ -10,10 +10,11 @@
 </div>
 
 <div class="center">
-    <h2>Ai idee ce se va intampla aici? Incearca sa ghicesti, altfel...-> <span onclick="showHint(hint1)" class="hint"> indiciu </span></h2>
-    <h3><div id="hint1" class="hidden"><u><b>Berlin</u></b>...Mosul a auzit ca va fi un foc de 
-        artificii foarte frumos in seara de <u><b>Revelion!</b></u></div></h3>
+    <h2>Nu esti sigura care este destinatia finala sau vrei sa stii ce se va intampla acolo? Incearca sa ghicesti, altfel...-> <span onclick="showHint(hint1)" class="hint"> indiciu </span></h2>
+    <h3><div id="hint1" class="hidden">Mosul a auzit ca va fi un foc de 
+        artificii foarte frumos in seara de <u><b>Silvester in Berlin!</b></u></div></h3>
 </div>
-
-<div class="center"><a href="https://sentibot.github.io/MCGC/I5" class="myButton">Urmatorul indiciu!!!</a></div>
-<!--trebuie inlocuit cu QR_SURPRIZE -->
+<div class="center">
+    <h2><span onclick="showMessage(message)" class="msg"> In cazult in care nu l-ai vazut... </span></h2>
+    <h3><div id="message" class="hidden"></div></h3>
+</div>
