--- a/I5.html
+++ b/I5.html
@@ -16,5 +16,5 @@
 </div>
 <div class="center">
     <h2><span onclick="showMessage(message)" class="msg"> In cazult in care nu l-ai vazut... </span></h2>
-    <h3><div id="message" class="hidden"></div></h3>
+    <h3><div id="message" class="hidden">Mesaju este pe spatele indiciilor!</div></h3>
 </div>
