--- a/I2.html
+++ b/I2.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h4 id="msg2">si</h4> <!--Fericita-->
+<h4 id="msg2">Iti doresc sa fii SANATOASA si FERICITA</h4>
 <h1>Prima parte a cadoului incepe cu un scurt drum. Primul pas pentru a pleca la drum, este intotdeauna...</h1>
 
 <div class="center">
