--- a/I3.html
+++ b/I3.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h4 id="msg3">, sa ai parte de </h4> <!--Iubire-->
+<h4 id="msg3">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE</h4>
 <h1>Recunoaste orasul...</h1>
 
 <div class="center">    
