--- a/I5.html
+++ b/I5.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h4 id="msg5">si...placute!</h4> <!--Surprize-->
+<h4 id="msg5">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE, INTELEGERE si SURPRIZE placute!</h4>
 <h1>Craciun Fericit!</h1>
 
 <div class="center">    
