--- a/I4.html
+++ b/I4.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="present.js"></script>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<h4 id="msg4">, </h4> <!--Intelegere-->
+<h4 id="msg4">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE, INTELEGERE</h4> <!--Intelegere-->
 <h1>Dar nu se termina aici...urmeaza a doua parte a cadoului pe care Mosul a transmis-o asistentului sau personal...</h1>
 
 <div class="center">    
