--- a/I5.html
+++ b/I5.html
@@ -15,6 +15,6 @@
         artificii foarte frumos in seara de <u><b>Silvester in Berlin!</b></u></div></h3>
 </div>
 <div class="center">
-    <h2><span onclick="showMessage(message)" class="msg"> In cazult in care nu l-ai vazut... </span></h2>
-    <h3><div id="message" class="hidden">Mesaju este pe spatele indiciilor!</div></h3>
+    <h2><span onclick="showMessage(message)" class="msg"> In cazult in care nu l-ai vazut...</span></h2>
+    <h3><div id="message" class="hidden">Mesajul este primul pe pagina si pe spatele indiciilor!</div></h3>
 </div>
