--- a/I1.html
+++ b/I1.html
@@ -10,5 +10,5 @@
     <h3><div id="hint1" class="hidden">Fiecare Craciun incepe cu un mic dejun delicios; poate vei gasi un alt indiciu acolo :)</div></h3>
 </div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu</a></div>
+<!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I2" class="myButton">Urmatorul indiciu</a></div> -->
 <!--trebuie inlocuit cu QR_SANATOASA_1 -->
