--- a/I2.html
+++ b/I2.html
@@ -14,5 +14,5 @@
     <img src="img/car_trip.jpg" alt="" width="500px;" height="500px;">
 </div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I3" class="myButton">Urmatorul indiciu!!!</a></div>
+<!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I3" class="myButton">Urmatorul indiciu!!!</a></div> -->
 <!--trebuie inlocuit cu QR_FERICITA_2 -->
