--- a/I3.html
+++ b/I3.html
@@ -15,5 +15,5 @@
     <h3><div id="hint1" class="hidden">Orasul este... <u><b>Cluj-Napoca!</b></u></div></h3>
 </div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I4" class="myButton">Urmatorul indiciu!!!</a></div>
+<!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I4" class="myButton">Urmatorul indiciu!!!</a></div> -->
 <!--trebuie inlocuit cu QR_IUBIRE_3 -->
