--- a/I4.html
+++ b/I4.html
@@ -14,5 +14,5 @@
     <h3><div id="hint1" class="hidden">Tu stii cel mai bine! Afla de la el unde poti gasi indiciul final!</div></h3>
 </div>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I5" class="myButton">Urmatorul indiciu!!!</a></div>
+<!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I5" class="myButton">Urmatorul indiciu!!!</a></div> -->
 <!--trebuie inlocuit cu QR_INTELEGERE -->
