--- a/I1.html
+++ b/I1.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg1">Iti doresc sa fii SANATOASA</h4>
-<h1>Pentru a incepe cautarea cadoului, va trebui prima data sa prinzi puteri :)</h1>
+<h1>Pentru a duce la bun sfarsit cautarea cadoului, va trebui prima data sa prinzi puteri...</h1>
 
 <div class="center">
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> clar si precis? (<u><b>cost</b></u>: un pupic)</h2>
