--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <h1>Cadoul de anul acesta trebuie cautat! Daca citesti asta inseamna ca deja ai facut primul pas si esti pe drumul cel bun.</h1>
 <h1>Cauta cu atentie un alt indiciu care te poate duce mai aproape de cadou :)</h1>
 
-<div class="center"><a href="https://sentibot.github.io/MCGC/I1" class="myButton">Incepe cautarea!!!</a></div>
+<!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I1" class="myButton">Incepe cautarea!!!</a></div> -->
 <!--incepi cu QR_START -->
 
