--- a/I2.html
+++ b/I2.html
@@ -3,11 +3,12 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg2">Iti doresc sa fii SANATOASA si FERICITA</h4>
-<h1>Prima parte a cadoului incepe cu un scurt drum. Primul pas pentru a pleca la drum, este intotdeauna...</h1>
+<h1>Prima parte a cadoului incepe cu un scurt drum. Avand forte proaspete dupa micul dejun, 
+    putem facea primul pas pentru plecare, iar acela este intotdeauna...</h1>
 
 <div class="center">
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> ca sa stii exact ce sa pregatesti? (<u><b>cost</b></u>: doi pupici!)</h2>
-    <h3><div id="hint1" class="hidden">pregatirea bagajului... include si haine mai groase 
+    <h2><div id="hint1" class="hidden">pregatirea bagajului... include si haine mai groase 
                                         ca sa poti sta afara pe timpul noptii</div></h3>
 </div>
 <div class="center">    
