--- a/I2.html
+++ b/I2.html
@@ -7,8 +7,8 @@
     putem facea primul pas pentru plecare, iar acela este intotdeauna...</h1>
 
 <div class="center">
-    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span> ca sa stii exact ce sa pregatesti? (<u><b>cost</b></u>: doi pupici!)</h2>
-    <h2><div id="hint1" class="hidden">pregatirea bagajului... include si haine mai groase 
+    <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span>? (<u><b>cost</b></u>: doi pupici!)</h2>
+    <h2><div id="hint1" class="hidden">pregatirea <u><b>bagajului</u></b>... include si haine mai groase 
                                         ca sa poti sta afara pe timpul noptii</div></h2>
 </div>
 <div class="center">    
