--- a/I3.html
+++ b/I3.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg3">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE</h4>
-<h1>Recunoaste orasul...</h1>
+<h1>Acum ca totul este pregatit si suntem gata de plecare, incearca sa recunoasti orasul...</h1>
 
 <div class="center">    
     <img src="img/cluj1.jpg" alt="" width="500px;" height="500px;">
