--- a/I4.html
+++ b/I4.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg4">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE, INTELEGERE</h4> <!--Intelegere-->
-<h1>Dar nu se termina aici...urmeaza a doua parte a cadoului pe care Mosul a transmis-o asistentului sau personal...</h1>
+<h1>Dar calatoria nu se termina aici...urmeaza a doua parte a cadoului pe care Mosul a transmis-o asistentului sau personal...</h1>
 
 <div class="center">    
     <img src="img/plane.jpg" alt="" width="500px;" height="500px;">
