--- a/I5.html
+++ b/I5.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg5">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE, INTELEGERE si SURPRIZE placute!</h4>
 <h1>Craciun Fericit!</h1>
+<h1>Se pare ca aptitudinile tale de negociere sunt foarte bune.</h1>
 
 <div class="center">    
     <img src="img/berlin.jpg" alt="" width="1000px;" height="1000px;">
