--- a/I2.html
+++ b/I2.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg2">Iti doresc sa fii SANATOASA si FERICITA</h4>
 <h1>Prima parte a cadoului incepe cu un scurt drum. Avand forte proaspete dupa micul dejun, 
-    putem facea primul pas pentru plecare, iar acela este intotdeauna...</h1>
+    putem face primul pas pentru plecare, iar acela este intotdeauna...</h1>
 
 <div class="center">
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span>? (<u><b>cost</b></u>: doi pupici!)</h2>
