--- a/I3.html
+++ b/I3.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <h4 id="msg3">Iti doresc sa fii SANATOASA si FERICITA, sa ai parte de IUBIRE</h4>
 <h1>Acum ca totul este pregatit si suntem gata de plecare, incearca sa recunoasti orasul...</h1>
+<h1>Ai mare grija la plecare! Inca mai poti gasi indicii foarte valorase pe drum!</h1>
 
 <div class="center">    
     <img src="img/cluj1.jpg" alt="" width="500px;" height="500px;">
@@ -14,6 +15,8 @@
     <h2>Vrei un <span onclick="showHint(hint1)" class="hint">indiciu</span>? (<u><b>cost</b></u>: un sarut!)</h2>
     <h2><div id="hint1" class="hidden">Orasul este... <u><b>Cluj-Napoca!</b></u></div></h2>
 </div>
+
+
 
 <!-- <div class="center"><a href="https://sentibot.github.io/MCGC/I4" class="myButton">Urmatorul indiciu!!!</a></div> -->
 <!--trebuie inlocuit cu QR_IUBIRE_3 -->
